.provarCaches/00D5h000009Q6XQEA0/objects/provar__Project_Issue_Type__c.object
<CustomObject>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Project__c</fullName>
        <label>Project</label>
        <referenceTo>provar__Project__c</referenceTo>
        <relationshipLabel>Project Issue Types</relationshipLabel>
        <relationshipName>Project_Issue_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Issue Type</label>
    <nameField>
        <label>Project Issue Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Issue Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>